--- a/obsessed/index.html
+++ b/obsessed/index.html
@@ -20,8 +20,8 @@
       href="https://kit.fontawesome.com/09dcee39d0.css"
       crossorigin="anonymous"
     />
-    <link href="../css/normalize.css" rel="stylesheet" />
-    <link href="../css/main.css" rel="stylesheet" />
+    <link href="css/normalize.css" rel="stylesheet" />
+    <link href="css/main.css" rel="stylesheet" />
   </head>
 
   <body>
